<resources>
    <string name="app_name">Formulario</string>

    <string name="titulo_crear_perfil">Crear Perfil</string>
    <string name="aviso_campos_obligatorios">Los campos con (*) son obligatorios</string>
    <string name="seccion_info_personal">Información Personal</string>
    <string name="etiqueta_nombre">Nombre(s) *</string>
    <string name="etiqueta_apellido">Apellido(s) *</string>
    <string name="etiqueta_fecha_nacimiento">Fecha de Nacimiento *</string>
    <string name="etiqueta_genero">Género *</string>
    <string name="genero_masculino">Masculino</string>
    <string name="genero_femenino">Femenino</string>
    <string name="genero_otro">Otro</string>

    <string name="seccion_contacto">Contacto</string>
    <string name="etiqueta_telefono">Teléfono *</string>
    <string name="etiqueta_correo">Correo Electrónico *</string>
    <string name="pista_correo">ejemplo@correo.com</string>

    <string name="seccion_intereses">Intereses</string>
    <string name="interes_musica">Música</string>
    <string name="interes_viajes">Viajes</string>
    <string name="interes_deportes">Deportes</string>
    <string name="interes_tecnologia">Tecnología</string>
    <string name="interes_arte">Arte</string>
    <string name="interes_cine">Cine</string>
    <string name="interes_lectura">Lectura</string>
    <string name="interes_cocina">Cocina</string>
    <string name="interes_fotografia">Fotografía</string>
    <string name="interes_videojuegos">Videojuegos</string>

    <string name="seccion_biografia">Biografía</string>
    <string name="pista_biografia">Cuéntanos algo sobre ti...</string>
    <string name="boton_guardar_perfil">Guardar Perfil</string>
    <string name="desc_cambiar_foto">Botón para cambiar foto de perfil</string>

    <string name="error_campo_obligatorio">Este campo es obligatorio</string>
    <string name="error_edad_minima">Debes tener al menos 13 años</string>
    <string name="error_correo_invalido">Formato de correo inválido</string>
    <string name="error_telefono_invalido">El teléfono debe tener %1$d dígitos para %2$s</string>
    <string name="error_genero_no_seleccionado">Por favor, selecciona tu género</string>

    <string name="titulo_reporte">Resumen de Perfil</string>
    <string name="reporte_nombre">Nombre Completo:</string>
    <string name="reporte_fecha_nacimiento">Fecha de Nacimiento:</string>
    <string name="reporte_genero">Género:</string>
    <string name="reporte_telefono">Teléfono:</string>
    <string name="reporte_correo">Correo Electrónico:</string>
    <string name="reporte_intereses">Intereses:</string>
    <string name="reporte_biografia">Biografía:</string>
    <string name="sin_intereses">Sin intereses seleccionados</string>
    <string name="biografia_vacia">No se proporcionó biografía</string>
    <string name="error_fecha_obligatoria">La fecha es obligatoria</string>
    <string name="error_genero_obligatorio">Selecciona un género</string>
    <string name="formato_telefono">%1$s %2$s</string>
    <string name="formato_nombre_completo">%1$s %2$s</string>
</resources>